# inkbox

./: .gitignore  CHANGELOG.md  CODEX_PLAN_REVIEW.md  CUSTOM_DOMAINS_SDK_PLAN.md  LICENSE  OTP_REFACTOR.md  PLAN-sdk-sms-texts.md  PR_REVIEW_CODEX.md  README.md  RELEASING.md  auth_app_plan.md  auth_subapp.md
examples/python/kernel/: .env.example  README.md  pyproject.toml
examples/python/kernel/inkbox_kernel/: __init__.py  agent.py  cli.py  config.py  data_models.py  identity.py  llm.py  tools.py
examples/python/kernel/src/: __init__.py  agent.py  cli.py  identity.py  llm.py  tools.py
examples/use-inkbox-browser-use/: .env.example  README.md  SKILL.md  pyproject.toml
examples/use-inkbox-browser-use/src/: agent.py  chrome.py  cli.py  config.py  identity.py  tools.py
sdk/python/: .coverage  .env  CHANGELOG.md  README.md  publish.sh  pyproject.toml
sdk/python/inkbox/: __init__.py  _config.py  _cookies.py  _http.py  agent_identity.py  client.py  credentials.py  exceptions.py  signing_keys.py  webhook_deliveries.py  webhook_subscriptions.py  webhooks.py
sdk/python/inkbox/a2a/: __init__.py  client.py  resource.py  types.py
sdk/python/inkbox/agent_signup/: types.py
sdk/python/inkbox/api_keys/: __init__.py  types.py
sdk/python/inkbox/api_keys/resources/: __init__.py  api_keys.py
sdk/python/inkbox/authenticator/: __init__.py  _http.py  exceptions.py  types.py
sdk/python/inkbox/authenticator/resources/: __init__.py  accounts.py  apps.py
sdk/python/inkbox/contacts/: __init__.py  types.py
sdk/python/inkbox/contacts/resources/: __init__.py  contact_access.py  contact_facts.py  contacts.py  correspondence.py  vcards.py
sdk/python/inkbox/identities/: __init__.py  _http.py  exceptions.py  types.py
sdk/python/inkbox/identities/resources/: identities.py
sdk/python/inkbox/imessage/: __init__.py  types.py
sdk/python/inkbox/imessage/resources/: __init__.py  contact_rules.py  imessages.py
sdk/python/inkbox/mail/: __init__.py  _http.py  exceptions.py  types.py
sdk/python/inkbox/mail/resources/: __init__.py  contact_rules.py  domains.py  identity_contact_rules.py  imports.py  mailboxes.py  messages.py  threads.py
sdk/python/inkbox/notes/: __init__.py  types.py
sdk/python/inkbox/notes/resources/: __init__.py  note_access.py  notes.py
sdk/python/inkbox/phone/: __init__.py  _http.py  exceptions.py  types.py
sdk/python/inkbox/phone/realtime/: __init__.py  _session.py  _transport.py  events.py  intervene.py
sdk/python/inkbox/phone/resources/: __init__.py  calls.py  contact_rules.py  hosted_agent.py  hosted_realtime.py  identity_contact_rules.py  incoming_call_action.py  numbers.py  sms_opt_ins.py  texts.py  transcripts.py
sdk/python/inkbox/tunnels/: __init__.py  _reserved_names.py  _validation.py  exceptions.py  types.py
sdk/python/inkbox/tunnels/client/: __init__.py  _asgi.py  _bootstrap.py  _bridge.py  _callable_streaming.py  _cert.py  _dispatch.py  _envelope.py  _h1_server.py  _h2_transcode.py  _listener.py  _runtime.py  _state.py  _tls.py  _upstream_tls.py  _url_forward.py  _ws.py  _ws_passthrough.py  _ws_upstream.py  _wsframe.py
sdk/python/inkbox/tunnels/resources/: tunnels.py
sdk/python/inkbox/vault/: __init__.py  _http.py  crypto.py  exceptions.py  totp.py  types.py
sdk/python/inkbox/vault/resources/: vault.py
sdk/python/inkbox/wallet/: __init__.py  types.py
sdk/python/inkbox/wallet/resources/: __init__.py  wallets.py
sdk/python/inkbox/whoami/: types.py
sdk/python/scripts/: regenerate_backoff_reference.py
sdk/python/tests/: conftest.py  sample_data.py  sample_data_authenticator.py  sample_data_identities.py  sample_data_mail.py  sample_data_vault.py  sample_data_wallet.py  test_a2a.py  test_agent_identity.py  test_agent_signup.py  test_api_keys.py  test_authenticator_accounts.py  test_authenticator_apps.py  test_calls.py  test_client.py  test_contact_memory.py  test_contact_rules.py  test_contacts_notes.py  test_credentials.py  test_exceptions.py  test_filter_mode_and_threads.py  test_hosted_agent.py  test_hosted_realtime.py  test_identities.py  test_identities_client.py  test_identities_types.py  test_identity_scoped_features.py  test_imessage.py  test_incoming_call_action.py  test_mail_client.py  test_mail_domains.py  test_mail_imports.py  test_mail_mailboxes.py  test_mail_messages.py  test_mail_threads.py  test_mail_types.py  test_numbers.py  test_realtime.py  test_realtime_control.py  test_signing_keys.py  (+32 more)
sdk/rust/: Cargo.toml  README.md  publish.sh
sdk/rust/examples/: phone_acceptance.rs  phone_identity_calls.rs
sdk/rust/src/: agent_identity.rs  client.rs  config.rs  cookies.rs  credentials.rs  error.rs  filters.rs  http.rs  lib.rs  signing_keys.rs
sdk/rust/src/agent_signup/: mod.rs  types.rs
sdk/rust/src/api_keys/: mod.rs  types.rs
sdk/rust/src/api_keys/resources/: api_keys.rs  mod.rs
sdk/rust/src/contacts/: correspondence.rs  mod.rs  types.rs
sdk/rust/src/contacts/resources/: contact_access.rs  contact_facts.rs  contacts.rs  correspondence.rs  mod.rs  vcards.rs
sdk/rust/src/identities/: exceptions.rs  mod.rs  types.rs
sdk/rust/src/identities/resources/: identities.rs  mod.rs
sdk/rust/src/imessage/: mod.rs  types.rs
sdk/rust/src/imessage/resources/: contact_rules.rs  imessages.rs  mod.rs
sdk/rust/src/mail/: exceptions.rs  mod.rs  types.rs
sdk/rust/src/mail/resources/: contact_rules.rs  domains.rs  identity_contact_rules.rs  imports.rs  mailboxes.rs  messages.rs  mod.rs  threads.rs
sdk/rust/src/notes/: mod.rs  types.rs
sdk/rust/src/notes/resources/: mod.rs  note_access.rs  notes.rs
sdk/rust/src/phone/: exceptions.rs  mod.rs  types.rs
sdk/rust/src/phone/realtime/: events.rs  intervene.rs  mod.rs  session.rs
sdk/rust/src/phone/resources/: calls.rs  contact_rules.rs  hosted_agent.rs  hosted_realtime.rs  identity_contact_rules.rs  mod.rs  (+5 more)
sdk/rust/src/tunnels/: exceptions.rs  mod.rs  types.rs  validation.rs
sdk/rust/src/vault/: crypto.rs  exceptions.rs  mod.rs  totp.rs  types.rs
sdk/rust/src/webhooks/: deliveries.rs  mod.rs  subscriptions.rs  types.rs
sdk/rust/src/whoami/: mod.rs  types.rs
(+387 files in other folders)
