[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkbox"
version = "0.1.1"
description = "Python SDK for the Inkbox API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://inkbox.ai"
Repository = "https://github.com/inkbox-ai/inkbox/tree/main/sdk/python"
"Bug Tracker" = "https://github.com/inkbox-ai/inkbox/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["inkbox"]
