# sdk/python/pyproject.toml

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "inkbox"
version = "0.4.15"
description = "Python SDK for the Inkbox API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "argon2-cffi>=23.1",
    "certifi>=2024.2.2",
    "cryptography>=43.0",
    "h11>=0.14",
    "h2>=4.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://inkbox.ai"
Repository = "https://github.com/inkbox-ai/inkbox/tree/main/sdk/python"
"Bug Tracker" = "https://github.com/inkbox-ai/inkbox/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["inkbox"]
