# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkbox-kernel"
version = "0.0.1"
description = "Give your agent an email and browser. Everything it needs to use the internet like you do."
readme = "README.md"
requires-python = ">=3.13.1,<3.14"  # pinning to 3.13.x
license = "MIT"
dependencies = [
    "anthropic>=0.40",
    "inkbox>=0.1.1",
    "kernel>=0.43.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "questionary>=2.0",
    "ruff>=0.11.0",
]
keywords = [
    "inkbox",
    "browser-automation",
    "email-api",
    "headless-chrome",
    "ai-agents",

    "agent-identity",
    "agent-infrastructure",
    "kernel",
    "unikernel",
]

[project.urls]
Homepage = "https://inkbox.ai"

## optional dependencies
[project.optional-dependencies]
cache = ["redis>=4.5.0"]       # caching/session storage

## enable package discovery from project root
[tool.setuptools.packages.find]
where = ["."]

## CLI entry point
[project.scripts]
inkbox-kernel = "src.cli:main"

## ruff setup
[tool.ruff]
line-length = 125

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D103"]  # no docstrings required in tests
